# PongBotQ_One_Leg

./: CMakeCache.txt  CMakeLists.txt  README.md  Readme.txt  package.xml
Models/DH_Ground/: model.config  model.sdf
Models/PONGBOT_LEG2_V1/: CMakeLists.txt  model.config  model.sdf  package.xml
Models/PONGBOT_LEG2_V1/config/: joint_names_PONGBOT_LEG2_V1.yaml
Models/PONGBOT_LEG2_V1/launch/: display.launch  gazebo.launch
Models/PONGBOT_LEG2_V1/meshes/: CALF.STL  FOOT.STL  GUIDE.STL  KNEE.STL  LOAD_BAR.STL  ROTATOR.STL
Models/PONGBOT_LEG2_V1/urdf/: PONGBOT_LEG2_V1.urdf  model.sdf
RTnet_Setting/: RT_net_Setting.sh  jh_ethercat_conf.sh
Untitled Folder/: main.c
bakcup_files/backup_cmake/: CMakeLists.txt
bakcup_files/backup_src/: CRobot.cpp
cmake backup/: CMakeLists.txt
etc/PONGBOT_Q_V6_rviz/: CMakeLists.txt  model.config  model.sdf  package.xml
etc/PONGBOT_Q_V6_rviz/config/: joint_names_PONGBOT_Q_V6.yaml
etc/PONGBOT_Q_V6_rviz/launch/: display.launch
etc/PONGBOT_Q_V6_rviz/meshes/: FR_THIGH.STL  RR_CALF.STL
etc/PONGBOT_Q_V6_rviz/urdf/: PONGBOT_Q_V6.gv  PONGBOT_Q_V6.urdf
etc/PONGBOT_Q_V6_rviz/urdf/backup/: PONGBOT_Q_V6.urdf
examples/soem_test/: CMakeLists.txt  main.cpp
examples/soem_test/backup/default/: main.cpp
examples/soem_test/backup/pongbot_13_motor/: main.cpp
examples/xenomai_test/: CMakeLists.txt  main.cpp
include/: CRobot.h  ecat_dc.h  main.h  pdo_def.h  servo_def.h
include/ethercat/etc/: pdo_def.h  servo.c  servo_def.h  slave_info.c  slave_info.h
include/ethercat/osal/: osal.c  osal.h
include/ethercat/oshw/: nicdrv.c  nicdrv.h
include/ethercat/oshw/rtnet/: nicdrv.c
include/ethercat/soem/: ethercat.h  ethercatconfig.c  ethercatdc.c  ethercateoe.c  ethercateoe.h  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatsoe.h  ethercattype.h
include/ethercat/soem/original/: ethercat.h  ethercatbase.c  ethercatconfig.c  ethercatmain.c  jh_structure.h
launch/: elmo.launch  pongbot.launch  pongbot_leg2_v1.launch
model/PONGBOT_ONE_LEG/: CMakeLists.txt  model.sdf  package.xml
model/PONGBOT_ONE_LEG/launch/: display.launch  gazebo.launch
model/PONGBOT_ONE_LEG/launch/Untitled Folder/: display.launch
model/PONGBOT_ONE_LEG/urdf/: PONGBOT_ONE_LEG.urdf
model/PONGBOT_Q_V6/: CMakeLists.txt  model.config  model.sdf  package.xml
model/PONGBOT_Q_V6/launch/: display.launch  gazebo.launch
model/PONGBOT_Q_V6/meshes/: FL_CALF.STL  FL_THIGH.STL  FR_CALF.STL  RL_CALF.STL  RL_THIGH.STL  RR_THIGH.STL  RR_TIP.STL
model/PONGBOT_Q_V6/urdf/: PONGBOT_Q_V6.urdf
pongbot_one_leg_rviz/: CMakeLists.txt  model.config  package.xml  urdf.rviz
pongbot_one_leg_rviz/config/: joint_names_PONGBOT_ONE_LEG.yaml
pongbot_one_leg_rviz/launch/: display.launch
pongbot_one_leg_rviz/meshes/: CALF.STL  THIGH.STL  TIP.STL
pongbot_one_leg_rviz/urdf/: PONGBOT_ONE_LEG.urdf
src/: CRobot.cpp  CRobot.h  main.cpp  pongbot_leg2_plugin.cc
src/Backup/: main.cpp
src/Backup/PongBotQ/: CRobot.cpp
worlds/: pongbot_leg2_v1.world
(+3 files in other folders)
